# bazel-compilation-database

./: MODULE.bazel  README.md  compdb.bzl
private/: info.bzl
test/: BUILD.bazel  template.bzl  test.py
test/workspace/: BUILD.bazel.template  MODULE.bazel.template  bina.cpp  generate_file.bzl
test/workspace/liba/: BUILD.bazel.template  liba.cpp  liba.hpp
test/workspace/libb/: BUILD.bazel.template  libb.cpp  libb.hpp
